align item problem fixed

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -3,7 +3,7 @@
     body{
         overflow-x: hidden;
     }
-    
+
     header{
         padding: 0;
     }
@@ -135,6 +135,7 @@
         row-gap: 1rem;
         width: 60%;
         margin: 2rem auto;
+        align-items: center;
     }
     .company-policy{
         display: grid;
@@ -226,5 +227,8 @@
         margin: auto;
         width: 100%;
         margin-top: 3rem;
+    }
+    .footer-important-link{
+        align-items: center;
     }
 }
